Top Nav - Product Sub Nav - > Needs to Vertical Align with Text Fixes #33

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ background-image: -ms-linear-gradient( 90deg, rgb(77,107,166) 0%, rgb(125,160,19
 #mega-menu-wrap-primary .learn-more .fa{  font-size: 20px; color: #4c6ca6; margin-bottom: 10px;}
 #mega-menu-wrap-primary .mega-current-page-ancestor > a{background: #7DA0C3!important; color: #FFF!important; font-weight: normal; text-decorat}
 #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-megamenu > ul.mega-sub-menu{width: 90%!important;}
-
+#mega-menu-wrap-primary #mega-menu-primary li.mega-menu-item a:before{  position: absolute!important; top: -3px; left: -10px;}
 /*banner*/
 section.banner{display: table; width: 100%;position: relative;padding: 80px 0;background: #ddd url(../img/bg-banner.jpg) no-repeat center top;color: #fff;text-align: center;-webkit-background-size: cover;
 background-size: cover;}
